--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: go
-go: 1.1
+
+go:
+ - 1.1
+ - tip
 
 install:
  - go get github.com/PuerkitoBio/goquery
 
 script:
- - go test -v
+ - go test
